  * New debconf template translations:
    - de.po, thanks to Kai Wasserbäch (Closes: #469334).
    - fr.po, thanks to Florent Usseil (Closes: #468813).
    - pt.po, thanks to Américo Monteiro (Closes: #469745, #472183).
  * collectd.init.d: Consider the DISABLE option only when starting collectd.
  * Added libsensors4-dev as option to the libsensors-dev build dependency.

 -- Sebastian Harl <sh@tokkee.org>  Sat, 29 Mar 2008 12:15:27 +0100

collectd (4.3.0-2) unstable; urgency=low

  * Added "lm-sensors" to the recommended packages and README.Debian.plugins
    (this is required by the sensors plugin).
  * Restrict the libvirt-dev build dependency and the libvirt plugin to amd64,
    i386 and powerpc (libvirt is only available on those architectures).
  * Restrict the libvirt-dev build dependency to versions >= 0.4.0-6 to make
    sure Xen is supported and to fix some strange FTBFS complaining about a
    missing symbol "virDomainBlockStats".

 -- Sebastian Harl <sh@tokkee.org>  Thu, 06 Mar 2008 23:37:44 +0100

collectd (4.3.0-1) unstable; urgency=low

  * New upstream release.
    - Added basic support for monitoring by introducing notifications and
      threshold checking.
    - Reverse lookups can be disabled using the "ReverseLookups" option of the
      ntpd plugin (Closes: #455162).
    New plugins:
    - Set the hostname to an unique identifier: uuid
    - CPU, dist, network statistics of guest systems: libvirt
  * Upload to unstable: With the latest changes to the perl plugin, all parts
    of collectd are suitable for a release.
  * Added libvirt-dev, libxml2-dev and libhal-dev to the build dependencies.
  * Updated package description to mention the monitoring support.
  * Install liboping/oping.h to collectd-dev as well.
  * collectd.init.d: Optionally start collectdmon to monitor collectd. This
    can be configured using the USE_COLLECTDMON variable - enabled by default.
  * collectd.init.d: Added ENABLE_COREFILES option - if enabled the core file