@@ -12,8 +12,9 @@ collectd (4.3.2-1) unstable; urgency=low
     - pt.po, thanks to Américo Monteiro (Closes: #469745, #472183).
   * collectd.init.d: Consider the DISABLE option only when starting collectd.
   * Added libsensors4-dev as option to the libsensors-dev build dependency.
+  * Disabled iptables plugin - libiptc is no longer available on Debian.
 
- -- Sebastian Harl <sh@tokkee.org>  Sat, 29 Mar 2008 12:15:27 +0100
+ -- Sebastian Harl <sh@tokkee.org>  Sat, 29 Mar 2008 12:23:12 +0100
 
 collectd (4.3.0-2) unstable; urgency=low
 
